@@ -57,21 +57,21 @@ var ImpComposeBase = {
         }
     },
 
-    updateAddressField: function(elt, address)
+    updateAddressField: function(e)
     {
-        var v = $F(elt).strip(),
+        var elt = $(e.memo.field),
+            v = $F(elt).strip(),
             pos = v.lastIndexOf(',');
 
         if (v.empty()) {
             v = '';
-        } else {
-            if (pos != -1) {
-                v = v.substring(0, pos);
-            }
+        } else if (pos != (v.length - 1)) {
             v += ', ';
+        } else {
+            v += ' ';
         }
 
-        elt.setValue(v + address + ', ');
+        elt.setValue(v + e.memo.value + ', ');
     }
 
 };
