@@ -2,6 +2,8 @@
 v6.1.1-git
 ----------
 
+[mms] Fix adding addresses from the contacts popup in certain situations (Bug
+      #12312).
 [jan] Fix fatal error when importing a PGP key (Bug #12318).
 [mms] Fix regressions in navigation arrow links on basic message page.
 [mms] Fix regression preventing Virtual Inbox from refreshing once opened in
